fix: blurred image

--- a/src/Pages/Home/Home.module.scss
+++ b/src/Pages/Home/Home.module.scss
@@ -4,9 +4,16 @@
   padding: 1rem;
   display: flex;
   flex-direction: column;
+  align-items: center;
   .image {
-    width: 100%;
-    max-height: 300px;
+    width: 65%;
+    padding: 1rem;
+    border-radius: 2rem;
+    border: 1px dashed black;
+    transition: transform ease-in-out .3s;
+    &:hover {
+      transform: scale(1.05);
+    }
   }
   .caption {
     padding-top: 1rem;
